sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var longueur = getNombreValeurs()
  var trier = true
  var debut = 0
  var fin = longueur-2
  
  while(trier){
    trier = false
    
    //1ere boucle
    for (i <- debut to fin){
      if (plusPetit(i+1,i)){
        echange(i,i+1)
        trier = true
      }
    }
    fin -= 1
    
    //2e boucle
    for (j <- fin to debut by -1){
      if (plusPetit(j+1,j)){
        echange(j,j+1)
        trier = true
      }
    }
    debut +=1
    
    
    
    }
  }
  
    
  
}